--- a/A16 Ex02 Shahaf 201381076 Liran 201664497/Properties/Resources.resx
+++ b/A16 Ex02 Shahaf 201381076 Liran 201664497/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="DesignedQueMark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DesignedQueMark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Likes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Likes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
